# Farmer-to-vendor

./: CMakeLists.txt  Dockerfile  README.md  later.c++  main.cpp  render.yaml  testing.cpp
db/images/: product002
db/json/: buyers.json  farmers.json  orders.json  products.json
include/: helper.hpp  load.hpp
src/: helper.cpp
static/css/: home.css  landing_page.css  sign_in.css
static/css/buyer/: cart.css  edit_profile.css  home.css  product.css  profile.css
static/css/farmer/: add_product.css  dashboard.css  order.css  order_update.css  order_view.css  products.css  settings.css
static/js/: home.js
templates/: error.html  home.html  landing_page.html  sign_in.html  sign_up.html
templates/buyer/: buyer_home.html  cart.html  edit_progile.html  product.html  profile.html
templates/farmer/: add_product.html  edit_product.html  farmer_dashboard.html  farmer_orders.html  farmer_products.html  farmer_settings.html  order_update.html  order_view.html
