cmake_minimum_required(VERSION 4.0.3)
project(dsa_project)

# Require C++17
set(CMAKE_CXX_STANDARD        17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS      OFF)

set(INCLUDE_PATHS /opt/homebrew/opt/asio/include /Users/macbookm2/crow/Crow/include )

add_executable(dsa_project main.cpp src/helper.cpp)

target_include_directories(dsa_project PUBLIC ${INCLUDE_PATHS} include)


# On some toolchains you must link the filesystem library manually
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_link_libraries(dsa_project PRIVATE stdc++fs)
endif()